--- a/Backend Devs/4.3 EJS Partials/views/contact.ejs
+++ b/Backend Devs/4.3 EJS Partials/views/contact.ejs
@@ -1,3 +1,5 @@
+<%- include("header.ejs") %>
+
 <h1>Contact Me</h1>
 <form>
   <input name="name" type="text" class="feedback-input" placeholder="Name" />
@@ -5,3 +7,5 @@
   <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
   <input type="submit" value="SUBMIT" />
 </form>
+
+<%- include("footer.ejs")%>
