--- a/Backend Devs/4.3 EJS Partials/views/about.ejs
+++ b/Backend Devs/4.3 EJS Partials/views/about.ejs
@@ -1,4 +1,4 @@
-<%- include("header.ejs") %>
+<%- include("partials/header.ejs") %>
 
 <h1>About Me</h1>
 <img class="profile" src="images/cat.jpeg" alt="cat profile">
@@ -18,4 +18,4 @@
   lectus.
   Metusgravida.</p>
 
-  <%- include("footer.ejs")%>
+  <%- include("partials/footer.ejs") %>
