--- a/Backend Devs/4.3 EJS Partials/views/contact.ejs
+++ b/Backend Devs/4.3 EJS Partials/views/contact.ejs
@@ -1,4 +1,4 @@
-<%- include("header.ejs") %>
+<%- include("partials/header.ejs") %>
 
 <h1>Contact Me</h1>
 <form>
@@ -8,4 +8,4 @@
   <input type="submit" value="SUBMIT" />
 </form>
 
-<%- include("footer.ejs")%>
+<%- include("partials/footer.ejs") %>
